refactor: deduplicate palette colors

--- a/scss/_latte.scss
+++ b/scss/_latte.scss
@@ -1,26 +1,30 @@
-$rosewater: #dc8a78;
-$flamingo: #dd7878;
-$pink: #ea76cb;
-$mauve: #8839ef;
-$red: #d20f39;
-$maroon: #e64553;
-$peach: #fe640b;
-$yellow: #df8e1d;
-$green: #40a02b;
-$teal: #179299;
-$sky: #04a5e5;
-$sapphire: #209fb5;
-$blue: #1e66f5;
-$lavender: #7287fd;
-$text: #4c4f69;
-$subtext1: #5c5f77;
-$subtext0: #6c6f85;
-$overlay2: #7c7f93;
-$overlay1: #8c8fa1;
-$overlay0: #9ca0b0;
-$surface2: #acb0be;
-$surface1: #bcc0cc;
-$surface0: #ccd0da;
-$crust: #dce0e8;
-$mantle: #e6e9ef;
-$base: #eff1f5;
+@use "catppuccin";
+
+$flavour: map-get(catppuccin.$palette, "latte");
+
+$rosewater: map-get($flavour, "rosewater");
+$flamingo: map-get($flavour, "flamingo");
+$pink: map-get($flavour, "pink");
+$mauve: map-get($flavour, "mauve");
+$red: map-get($flavour, "red");
+$maroon: map-get($flavour, "maroon");
+$peach: map-get($flavour, "peach");
+$yellow: map-get($flavour, "yellow");
+$green: map-get($flavour, "green");
+$teal: map-get($flavour, "teal");
+$sky: map-get($flavour, "sky");
+$sapphire: map-get($flavour, "sapphire");
+$blue: map-get($flavour, "blue");
+$lavender: map-get($flavour, "lavender");
+$text: map-get($flavour, "text");
+$subtext1: map-get($flavour, "subtext1");
+$subtext0: map-get($flavour, "subtext0");
+$overlay2: map-get($flavour, "overlay2");
+$overlay1: map-get($flavour, "overlay1");
+$overlay0: map-get($flavour, "overlay0");
+$surface2: map-get($flavour, "surface2");
+$surface1: map-get($flavour, "surface1");
+$surface0: map-get($flavour, "surface0");
+$base: map-get($flavour, "base");
+$mantle: map-get($flavour, "mantle");
+$crust: map-get($flavour, "crust");
