--- a/scss/_macchiato.scss
+++ b/scss/_macchiato.scss
@@ -1,26 +1,30 @@
-$rosewater: #f4dbd6;
-$flamingo: #f0c6c6;
-$pink: #f5bde6;
-$mauve: #c6a0f6;
-$red: #ed8796;
-$maroon: #ee99a0;
-$peach: #f5a97f;
-$yellow: #eed49f;
-$green: #a6da95;
-$teal: #8bd5ca;
-$sky: #91d7e3;
-$sapphire: #7dc4e4;
-$blue: #8aadf4;
-$lavender: #b7bdf8;
-$text: #cad3f5;
-$subtext1: #b8c0e0;
-$subtext0: #a5adcb;
-$overlay2: #939ab7;
-$overlay1: #8087a2;
-$overlay0: #6e738d;
-$surface2: #5b6078;
-$surface1: #494d64;
-$surface0: #363a4f;
-$base: #24273a;
-$mantle: #1e2030;
-$crust: #181926;
+@use "catppuccin";
+
+$flavour: map-get(catppuccin.$palette, "macchiato");
+
+$rosewater: map-get($flavour, "rosewater");
+$flamingo: map-get($flavour, "flamingo");
+$pink: map-get($flavour, "pink");
+$mauve: map-get($flavour, "mauve");
+$red: map-get($flavour, "red");
+$maroon: map-get($flavour, "maroon");
+$peach: map-get($flavour, "peach");
+$yellow: map-get($flavour, "yellow");
+$green: map-get($flavour, "green");
+$teal: map-get($flavour, "teal");
+$sky: map-get($flavour, "sky");
+$sapphire: map-get($flavour, "sapphire");
+$blue: map-get($flavour, "blue");
+$lavender: map-get($flavour, "lavender");
+$text: map-get($flavour, "text");
+$subtext1: map-get($flavour, "subtext1");
+$subtext0: map-get($flavour, "subtext0");
+$overlay2: map-get($flavour, "overlay2");
+$overlay1: map-get($flavour, "overlay1");
+$overlay0: map-get($flavour, "overlay0");
+$surface2: map-get($flavour, "surface2");
+$surface1: map-get($flavour, "surface1");
+$surface0: map-get($flavour, "surface0");
+$base: map-get($flavour, "base");
+$mantle: map-get($flavour, "mantle");
+$crust: map-get($flavour, "crust");
