--- a/scss/_frappe.scss
+++ b/scss/_frappe.scss
@@ -1,26 +1,30 @@
-$rosewater: #f2d5cf;
-$flamingo: #eebebe;
-$pink: #f4b8e4;
-$mauve: #ca9ee6;
-$red: #e78284;
-$maroon: #ea999c;
-$peach: #ef9f76;
-$yellow: #e5c890;
-$green: #a6d189;
-$teal: #81c8be;
-$sky: #99d1db;
-$sapphire: #85c1dc;
-$blue: #8caaee;
-$lavender: #babbf1;
-$text: #c6d0f5;
-$subtext1: #b5bfe2;
-$subtext0: #a5adce;
-$overlay2: #949cbb;
-$overlay1: #838ba7;
-$overlay0: #737994;
-$surface2: #626880;
-$surface1: #51576d;
-$surface0: #414559;
-$base: #303446;
-$mantle: #292c3c;
-$crust: #232634;
+@use "catppuccin";
+
+$flavour: map-get(catppuccin.$palette, "frappe");
+
+$rosewater: map-get($flavour, "rosewater");
+$flamingo: map-get($flavour, "flamingo");
+$pink: map-get($flavour, "pink");
+$mauve: map-get($flavour, "mauve");
+$red: map-get($flavour, "red");
+$maroon: map-get($flavour, "maroon");
+$peach: map-get($flavour, "peach");
+$yellow: map-get($flavour, "yellow");
+$green: map-get($flavour, "green");
+$teal: map-get($flavour, "teal");
+$sky: map-get($flavour, "sky");
+$sapphire: map-get($flavour, "sapphire");
+$blue: map-get($flavour, "blue");
+$lavender: map-get($flavour, "lavender");
+$text: map-get($flavour, "text");
+$subtext1: map-get($flavour, "subtext1");
+$subtext0: map-get($flavour, "subtext0");
+$overlay2: map-get($flavour, "overlay2");
+$overlay1: map-get($flavour, "overlay1");
+$overlay0: map-get($flavour, "overlay0");
+$surface2: map-get($flavour, "surface2");
+$surface1: map-get($flavour, "surface1");
+$surface0: map-get($flavour, "surface0");
+$base: map-get($flavour, "base");
+$mantle: map-get($flavour, "mantle");
+$crust: map-get($flavour, "crust");
