--- a/scss/_mocha.scss
+++ b/scss/_mocha.scss
@@ -1,26 +1,30 @@
-$rosewater: #f5e0dc;
-$flamingo: #f2cdcd;
-$pink: #f5c2e7;
-$mauve: #cba6f7;
-$red: #f38ba8;
-$maroon: #eba0ac;
-$peach: #fab387;
-$yellow: #f9e2af;
-$green: #a6e3a1;
-$teal: #94e2d5;
-$sky: #89dceb;
-$sapphire: #74c7ec;
-$blue: #89b4fa;
-$lavender: #b4befe;
-$text: #cdd6f4;
-$subtext1: #bac2de;
-$subtext0: #a6adc8;
-$overlay2: #9399b2;
-$overlay1: #7f849c;
-$overlay0: #6c7086;
-$surface2: #585b70;
-$surface1: #45475a;
-$surface0: #313244;
-$base: #1e1e2e;
-$mantle: #181825;
-$crust: #11111b;
+@use "catppuccin";
+
+$flavour: map-get(catppuccin.$palette, "mocha");
+
+$rosewater: map-get($flavour, "rosewater");
+$flamingo: map-get($flavour, "flamingo");
+$pink: map-get($flavour, "pink");
+$mauve: map-get($flavour, "mauve");
+$red: map-get($flavour, "red");
+$maroon: map-get($flavour, "maroon");
+$peach: map-get($flavour, "peach");
+$yellow: map-get($flavour, "yellow");
+$green: map-get($flavour, "green");
+$teal: map-get($flavour, "teal");
+$sky: map-get($flavour, "sky");
+$sapphire: map-get($flavour, "sapphire");
+$blue: map-get($flavour, "blue");
+$lavender: map-get($flavour, "lavender");
+$text: map-get($flavour, "text");
+$subtext1: map-get($flavour, "subtext1");
+$subtext0: map-get($flavour, "subtext0");
+$overlay2: map-get($flavour, "overlay2");
+$overlay1: map-get($flavour, "overlay1");
+$overlay0: map-get($flavour, "overlay0");
+$surface2: map-get($flavour, "surface2");
+$surface1: map-get($flavour, "surface1");
+$surface0: map-get($flavour, "surface0");
+$base: map-get($flavour, "base");
+$mantle: map-get($flavour, "mantle");
+$crust: map-get($flavour, "crust");
